fix leaderboard placement and page spacing

--- a/sites/bizbash.com/server/styles/index.scss
+++ b/sites/bizbash.com/server/styles/index.scss
@@ -7,12 +7,11 @@ body {
   letter-spacing: $bizbash-letter-spacing;
 }
 .document-container {
-  padding-right: map-get($spacers, 3);
-  padding-left: map-get($spacers, 3);
-}
-.page {
   padding-right: 0;
   padding-left: 0;
+}
+.page {
+  padding: 30px 15px;
 }
 
 .container-fluid-max {
@@ -426,5 +425,12 @@ body {
   &__node {
     padding: map-get($spacers, block);
     margin-bottom: 0;
+  }
+}
+.page-attribution {
+  &__content-authors {
+    &::before {
+      content: "By";
+    }
   }
 }
